[package]
name = "dedupetool"
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
console = "0.15.5"
futures = "0.3.27"
libc = "0.2.140"
num-format = "0.4.4"
size_format = "1.0.2"
thiserror = "1.0.39"
fclones = "0.30.0"

[dependencies.clap]
version = "4.1.8"
features = ["derive"]

[dependencies.tokio]
version = "1.26.0"
features = ["rt-multi-thread", "macros", "fs", "sync"]
