[package]
name = "dedupetool"
version = "0.1.3-dev"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "MPL-2"
edition = "2021"
publish = false

[dependencies]
console = "0.15.8"
futures = "0.3.30"
libc = "0.2.155"
num-format = "0.4.4"
thiserror = "1.0.62"
fclones = "0.34.0"
indicatif = "0.17.8"

[dependencies.clap]
version = "4.5.9"
features = ["derive"]

[dependencies.tokio]
version = "1.38.0"
features = ["rt-multi-thread", "macros", "fs", "sync"]

[dev-dependencies]
assert_unordered = "0.3.5"

[profile.release]
debug = true
